--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -18,3 +18,11 @@ jobs:
         username: ${{ secrets.ftp_user }}
         password: ${{ secrets.ftp_password }}
         server-dir: stage/
+
+    - name: Install dependencies
+      uses: actions/composer@v6
+      with:
+        dev: yes
+        args: --profile --ignore-platform-reqs
+        php_version: "7.4"
+        version: 1
