--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -20,7 +20,7 @@ jobs:
         server-dir: stage/
 
     - name: Install dependencies
-      uses: actions/composer@v6
+      uses: php-actions/composer@v6
       with:
         dev: yes
         args: --profile --ignore-platform-reqs
