--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -23,5 +23,6 @@ jobs:
       uses: php-actions/composer@v6
       with:
         dev: yes
+        path: /project/
         args: --profile --ignore-platform-reqs
         php_version: "7.4"
