--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,13 @@ jobs:
         dev: yes
         args: --profile --ignore-platform-reqs
         php_version: "7.4"
+        
+    - name: Update dependencies
+      uses: "ramsey/composer-update@v2"
+      with:
+        dev: yes
+        args: --profile --ignore-platform-reqs
+        php_version: "7.4"
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
