--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -19,7 +19,11 @@ jobs:
         php_version: "7.4"
 
     - name: Update dependencies
-      uses: "kawax/composer-update-action@master"
+      uses: php-actions/composer@v6
+      with:
+        command: "composer update"
+        dev: yes
+        php_version: "7.4"
 
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
