--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -11,6 +11,9 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
 
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
     - name: Install dependencies
       uses: "ramsey/composer-install@v2"
       with:
