--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,20 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
 
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
     - name: Install dependencies
       uses: "ramsey/composer-install@v2"
       with:
-        dev: no
+        dev: yes
         args: --profile --ignore-platform-reqs
         php_version: "7.4"
-        
+
     - name: Update dependencies
-      uses: "kawax/composer-update-action@master"
+      run: composer update
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
