--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -23,6 +23,8 @@ jobs:
 
     - name: Update dependencies
       run: composer update
+    - name: Generate key
+      run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
 
